--- a/mangalens-mobile/app.json
+++ b/mangalens-mobile/app.json
@@ -10,7 +10,11 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.mangalensmobile"
+      "bundleIdentifier": "com.anonymous.mangalensmobile",
+      "infoPlist": {
+        "NSCameraUsageDescription": "MangaLens needs your camera to take photos for translation",
+        "NSMicrophoneUsageDescription": "MangaLens needs your microphone to record audio"
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -27,6 +31,14 @@
     },
     "plugins": [
       "expo-router",
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+          "recordAudioAndroid": true
+        }
+      ],
       [
         "expo-splash-screen",
         {
