--- a/mangalens-mobile/package.json
+++ b/mangalens-mobile/package.json
@@ -40,7 +40,11 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "expo-camera": "~16.1.11"
+    "expo-camera": "~16.1.11",
+    "expo-image-picker": "~16.1.4",
+    "expo-media-library": "~17.1.7",
+    "expo-document-picker": "~13.1.6",
+    "expo-file-system": "~18.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
